--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-image: url("../images/wood.jpg");
+  font-family: cursive;
 }
 section {
   margin: 2% auto;
@@ -119,18 +120,19 @@ a{text-decoration: none}
     background-image: url("../images/bg.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
-    width: 70%;
+    width: 50%;
 }
 
 .tittle{
-    margin-top: 100px;
+    margin-top: 45px;
     text-align: center;
     font-size: 30px;
 }
 
 .panel{
+    float: left;
     margin-left: 7%;
-    width: 20%;
+    width: 30%;
     
     
 }
@@ -149,5 +151,9 @@ a{text-decoration: none}
 #guess{
     
     letter-spacing: 1em;
+}
+
+.picContainer{
+    float:none;
 }
 
