--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ section {
   border-radius: 10px;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
+  min-width: 1060px;
 }
 
 .pattern {
@@ -121,6 +122,7 @@ a{text-decoration: none}
     background-size: 100%;
     background-repeat: no-repeat;
     width: 50%;
+    min-width: 1060px;
 }
 
 .tittle{
@@ -130,30 +132,36 @@ a{text-decoration: none}
 }
 
 .panel{
-    float: left;
-    margin-left: 7%;
-    width: 30%;
-    
+    font-size: 40px;
+    margin: 4% auto;
+    text-align: center;
     
 }
 
 .panel>h4{
-    margin-top: 10px;
-    font-size: 40px;
+  width: fit-content;
+  margin: auto;  
 }
 
 .guessingBlock{
-    float:right;
-    border:solid black 3px;
-    padding: 20px;
-    width: 40%
+  
+  text-align: center;
+  margin: 0 auto;
+  font-size: 40px;
+
+
+
 }
+
 #guess{
     
-    letter-spacing: 1em;
+    color: tomato;
+    letter-spacing: 10px;
 }
 
-.picContainer{
-    float:none;
+#picture{
+    display: block;
+    margin: auto;
+    
+    
 }
-
