--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("../images/wood.jpg");
-  font-family: cursive;
+  font-family: 'Patrick Hand', cursive;
 }
 section {
   margin: 2% auto;
